--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -19,10 +20,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-favicon": "^2.0.7",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux-persist": "^6.0.0",
     "yap": "^0.0.2",
     "yup": "^1.4.0"
   },
