--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "firebase": "^10.13.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-favicon": "^2.0.7",
     "react-hook-form": "^7.53.0",
